# rotterdam-emplai

./: .env.example  .gitignore  PLAN.md  docker-compose.yml  openapi.json  openapi.yaml  Техническое_задание_и_система_оценки.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260515_0001_initial_schema.py  20260516_0002_add_vector_columns.py
backend/app/: cli.py  main.py
backend/app/api/: auth.py  matches.py  resumes.py  vacancies.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  matches.py  resumes.py  vacancies.py
backend/app/services/: background.py  claude.py  embedder.py  enrichment.py  extractor.py  matcher.py  parser.py  repository.py  text_utils.py
demo_files/Вакансии/: Вакансия 1 Rust.docx  Вакансия 1 Rust.txt  Вакансия 10 Senior Backend Developer (Java  .NET).docx  Вакансия 10 Senior Backend Developer (Java  .NET).txt  Вакансия 11 Системный аналитик.docx  Вакансия 11 Системный аналитик.txt  Вакансия 12 Data Engineer.docx  Вакансия 12 Data Engineer.txt  Вакансия 13 Тестировщик-автоматизатор (Python).docx  Вакансия 13 Тестировщик-автоматизатор (Python).txt  Вакансия 14 Разработчик MFSM.docx  Вакансия 14 Разработчик MFSM.txt  Вакансия 15 Frontend-разработчик.docx  Вакансия 15 Frontend-разработчик.txt  Вакансия 16 Продуктовый аналитик.docx  Вакансия 16 Продуктовый аналитик.txt  (+24 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  readme.md
scripts/: export_openapi.py  smoke_parser.py
(+134 files in other folders)
